--- a/winter_2025/hw2_release/hw2.ipynb
+++ b/winter_2025/hw2_release/hw2.ipynb
@@ -42,10 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "616d7744-dbf3-4b5b-9800-665e5763dbaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'CS131_release'...\n",
+      "remote: Enumerating objects: 2536, done.\u001b[K\n",
+      "remote: Counting objects: 100% (208/208), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (136/136), done.\u001b[K\n",
+      "remote: Total 2536 (delta 132), reused 72 (delta 72), pack-reused 2328 (from 4)\u001b[K\n",
+      "Receiving objects: 100% (2536/2536), 158.30 MiB | 7.27 MiB/s, done.\n",
+      "Resolving deltas: 100% (661/661), done.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -56,10 +70,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "843f1694-19ca-4030-8f11-e8be3928e0ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/jackquach/Desktop/STANFORD/Soph Year (2024-25)/CS131/CS131_release/winter_2025/hw2_release/CS131_release/winter_2025/hw2_release\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jackquach/Library/Python/3.11/lib/python/site-packages/IPython/core/magics/osm.py:417: UserWarning: using dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+     ]
+    }
+   ],
    "source": [
     "%cd CS131_release/winter_2025/hw2_release/"
    ]
@@ -75,10 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2c9508a7-624a-46a7-81e1-3512f48cedb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from -r requirements.txt (line 1)) (1.24.4)\n",
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement Time (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\u001b[31mERROR: No matching distribution found for Time\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "# Install the necessary dependencies\n",
     "# (restart your runtime session if prompted to, and then re-run this cell)\n",
@@ -1295,7 +1339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1309,7 +1353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
